force-app/main/default/objects/Contact/fields/A_Gift_Quantity__c.field-meta.xml
<CustomField>
    <fullName>A_Gift_Quantity__c</fullName>
    <label>A Gift Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>