force-app/main/default/objects/Contact/fields/Account_Account_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Account_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Additional Account)</relationshipLabel>
    <relationshipName>Contacts_del</relationshipName>
    <type>Lookup</type>
</CustomField>