force-app/main/default/objects/Contact/fields/Additional_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Additional Account 1)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>