force-app/main/default/objects/Contact/fields/Addtl_Lead_Source_Information__c.field-meta.xml
<CustomField>
    <fullName>Addtl_Lead_Source_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Addtl Lead Source Information</label>
    <type>TextArea</type>
</CustomField>