force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Age</label>
    <length>4</length>
    <type>Text</type>
</CustomField>