force-app/main/default/objects/Contact/fields/Annual_Business_Survey_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Annual_Business_Survey_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Business Survey Recipient</label>
    <type>Checkbox</type>
</CustomField>