force-app/main/default/objects/Contact/fields/Applicant_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ID_Number__c</fullName>
    <description>Applicant ID for nCino Online Applications</description>
    <displayFormat>{0000000}</displayFormat>
    <label>Applicant ID Number</label>
    <type>AutoNumber</type>
</CustomField>