force-app/main/default/objects/Contact/fields/Ascensus_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_As_of_Date__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.As_of_Date__c</formula>
    <label>Ascensus (Advisor) As of Date</label>
    <type>Date</type>
</CustomField>