force-app/main/default/objects/Contact/fields/Ascensus_Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Branch_City__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Branch_City__c</formula>
    <label>Ascensus (Advisor) Branch City</label>
    <type>Text</type>
</CustomField>