force-app/main/default/objects/Contact/fields/Ascensus_Branch_State__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Branch_State__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Branch_State__c</formula>
    <label>Ascensus (Advisor) Branch State</label>
    <type>Text</type>
</CustomField>