force-app/main/default/objects/Contact/fields/Ascensus_Branch_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Branch_Street_Address__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Branch_Street_Address__c</formula>
    <label>Ascensus (Advisor) Branch Street Address</label>
    <type>Text</type>
</CustomField>