force-app/main/default/objects/Contact/fields/Ascensus_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Dealer_Name__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Dealer_Name__c</formula>
    <label>Ascensus (Advisor) Dealer Name</label>
    <type>Text</type>
</CustomField>