force-app/main/default/objects/Contact/fields/Ascensus_Dealer_Trading_ID__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Dealer_Trading_ID__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Dealer_Trading_ID__c</formula>
    <label>Ascensus (Advisor) Dealer Trading ID</label>
    <type>Text</type>
</CustomField>