force-app/main/default/objects/Contact/fields/Ascensus_Direct_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Direct_As_of_Date__c</fullName>
    <formula>NEST_Ascensus_Direct_Unique_ID_Record__r.As_of_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Direct) As of Date</label>
    <type>Date</type>
</CustomField>