force-app/main/default/objects/Contact/fields/Ascensus_Direct_Branch_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Direct_Branch_Zip_Code__c</fullName>
    <formula>NEST_Ascensus_Direct_Unique_ID_Record__r.Branch_zip_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Direct) Branch Zip Code</label>
    <type>Text</type>
</CustomField>