force-app/main/default/objects/Contact/fields/Ascensus_Direct_CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Direct_CRD_Number__c</fullName>
    <formula>NEST_Ascensus_Direct_Unique_ID_Record__r.CRD_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Direct) CRD Number</label>
    <type>Text</type>
</CustomField>