force-app/main/default/objects/Contact/fields/Ascensus_Direct_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Direct_Dealer_Name__c</fullName>
    <formula>NEST_Ascensus_Direct_Unique_ID_Record__r.Dealer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Direct) Dealer Name</label>
    <type>Text</type>
</CustomField>