force-app/main/default/objects/Contact/fields/Ascensus_Direct_Rep_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Direct_Rep_Street_Address__c</fullName>
    <formula>NEST_Ascensus_Direct_Unique_ID_Record__r.Rep_Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Direct) Rep Street Address</label>
    <type>Text</type>
</CustomField>