force-app/main/default/objects/Contact/fields/Ascensus_Rep_City__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Rep_City__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Rep_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Advisor) Rep City</label>
    <type>Text</type>
</CustomField>