force-app/main/default/objects/Contact/fields/Ascensus_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Rep_Email__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Rep_Email__c</formula>
    <label>Ascensus (Advisor) Rep Email</label>
    <type>Text</type>
</CustomField>