force-app/main/default/objects/Contact/fields/Ascensus_Rep_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Rep_Street_Address__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Rep_Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ascensus (Advisor) Rep Street Address</label>
    <type>Text</type>
</CustomField>