force-app/main/default/objects/Contact/fields/Ascensus_Rep_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Rep_Zip_Code__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Rep_Zip_Code__c</formula>
    <label>Ascensus (Advisor) Rep Zip Code</label>
    <type>Text</type>
</CustomField>