force-app/main/default/objects/Contact/fields/Ascensus_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Unique_ID__c</fullName>
    <formula>NEST_Ascensus_Advisor_CRD_Record__r.Unique_ID__c</formula>
    <label>Ascensus (Advisor) Unique ID</label>
    <type>Text</type>
</CustomField>