force-app/main/default/objects/Contact/fields/Assets_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Assets_Under_Management__c</fullName>
    <label>Assets Under Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>