force-app/main/default/objects/Contact/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select this contact&#39;s Attorney from the existing list of COI&#39;s.  If the COI doesn&#39;t exist, create it.</inlineHelpText>
    <label>Attorney</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>