force-app/main/default/objects/Contact/fields/B_Gift_Quantity__c.field-meta.xml
<CustomField>
    <fullName>B_Gift_Quantity__c</fullName>
    <label>B Gift Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>