force-app/main/default/objects/Contact/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <description>Encrypted Birth Date field</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>