force-app/main/default/objects/Contact/fields/Bypass_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Duplicate_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Duplicate Rule</label>
    <type>Checkbox</type>
</CustomField>