force-app/main/default/objects/Contact/fields/CO_9x9__c.field-meta.xml
<CustomField>
    <fullName>CO_9x9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO 9x9</label>
    <type>Checkbox</type>
</CustomField>