force-app/main/default/objects/Contact/fields/CO_Email_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>CO_Email_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO Email Newsletter</label>
    <type>Checkbox</type>
</CustomField>