force-app/main/default/objects/Contact/fields/CPA_Accountant__c.field-meta.xml
<CustomField>
    <fullName>CPA_Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select this contact&#39;s CPA/Accountant from the existing list of COI&#39;s.  If the COI doesn&#39;t exist, create it.</inlineHelpText>
    <label>CPA/Accountant</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Contacts (CPA/Accountant)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>