force-app/main/default/objects/Contact/fields/CRA_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>CRA_Bank_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Bank Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>