force-app/main/default/objects/Contact/fields/CRA_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CRA_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Contact Email</label>
    <type>Email</type>
</CustomField>