force-app/main/default/objects/Contact/fields/CRA_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CRA_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Contact Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>