force-app/main/default/objects/Contact/fields/CRA_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>CRA_Contact_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Contact Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>