force-app/main/default/objects/Contact/fields/CRA_History_Description__c.field-meta.xml
<CustomField>
    <fullName>CRA_History_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA History Description</label>
    <length>70</length>
    <type>Text</type>
</CustomField>