force-app/main/default/objects/Contact/fields/CRA_Logo__c.field-meta.xml
<CustomField>
    <fullName>CRA_Logo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>