force-app/main/default/objects/Contact/fields/CRA_Market_Name__c.field-meta.xml
<CustomField>
    <fullName>CRA_Market_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Market Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>