force-app/main/default/objects/Contact/fields/CRA_Website__c.field-meta.xml
<CustomField>
    <fullName>CRA_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Website</label>
    <type>Url</type>
</CustomField>