force-app/main/default/objects/Contact/fields/CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>CRD_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRD Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>