force-app/main/default/objects/Contact/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Do Not Use - This part of the nCino Managed package.  We track customer birth dates in the Birth_Date__pc field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>