force-app/main/default/objects/Contact/fields/Date_of_Birth_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Text__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>