force-app/main/default/objects/Contact/fields/Deceased_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deceased Indicator</label>
    <type>Checkbox</type>
</CustomField>