force-app/main/default/objects/Contact/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <description>Secondary customer email address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>