force-app/main/default/objects/Contact/fields/Email_3__c.field-meta.xml
<CustomField>
    <fullName>Email_3__c</fullName>
    <description>Tertiary customer email address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>