force-app/main/default/objects/Contact/fields/Executive_Summit__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Summit</label>
    <type>Checkbox</type>
</CustomField>