force-app/main/default/objects/Contact/fields/Experian_ID_Verification_Date_TIme__c.field-meta.xml
<CustomField>
    <fullName>Experian_ID_Verification_Date_TIme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Experian ID Verification Date/TIme</label>
    <type>DateTime</type>
</CustomField>