force-app/main/default/objects/Contact/fields/Experian_ID_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Experian_ID_Verification_Status__c</fullName>
    <label>Experian ID Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <color>#78C953</color>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Fail</fullName>
                <color>#FF0000</color>
                <label>Fail</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <color>#FF9900</color>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>