force-app/main/default/objects/Contact/fields/First_Line_of_Addressee__c.field-meta.xml
<CustomField>
    <fullName>First_Line_of_Addressee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for sending holiday cards</inlineHelpText>
    <label>First Line of Addressee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>