force-app/main/default/objects/Contact/fields/FNB_Employee__c.field-meta.xml
<CustomField>
    <fullName>FNB_Employee__c</fullName>
    <label>FNB Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>