force-app/main/default/objects/Contact/fields/FNB_System_of_Record_ID_Workflow__c.field-meta.xml
<CustomField>
    <fullName>FNB_System_of_Record_ID_Workflow__c</fullName>
    <description>This field resides on the Customer object, but it is needed on the contact object in order to load campaigns via data loader with CIXF ID as the external identifier.  A workflow populates this field on all new person customers.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FNB System of Record ID (Workflow)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>