force-app/main/default/objects/Contact/fields/Fraternity__c.field-meta.xml
<CustomField>
    <fullName>Fraternity__c</fullName>
    <label>Fraternity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alpha Gamma Rho</fullName>
            </value>
            <value>
                <fullName>Delta Tau Delta</fullName>
            </value>
            <value>
                <fullName>Farmhouse</fullName>
            </value>
            <value>
                <fullName>Kappa Sigma</fullName>
            </value>
            <value>
                <fullName>Lamba Chi Alpha</fullName>
            </value>
            <value>
                <fullName>Phi Delta Theta</fullName>
            </value>
            <value>
                <fullName>Phi Gamma Iota</fullName>
            </value>
            <value>
                <fullName>Phi Kappa Delta</fullName>
            </value>
            <value>
                <fullName>Sigma Alpha Epsilon</fullName>
            </value>
            <value>
                <fullName>Sigma Chi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>