force-app/main/default/objects/Contact/fields/Holiday_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Gifts__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Holiday Gifts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>No Ship</fullName>
            </value>
            <value>
                <fullName>A Gift</fullName>
                <isActive>false</isActive>
                <label>A Gift</label>
            </value>
            <value>
                <fullName>A Gift - Ship</fullName>
                <isActive>false</isActive>
                <label>A Gift - Ship</label>
            </value>
            <value>
                <fullName>B Gift</fullName>
                <isActive>false</isActive>
                <label>B Gift</label>
            </value>
            <value>
                <fullName>B Gift - Ship</fullName>
                <isActive>false</isActive>
                <label>B Gift - Ship</label>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>